# mm2

./: .gitignore  Cargo.toml  Makefile  README.md  aligned.bam  check.py
scripts/: metric.py  pyminimap2.py  sub_query.py
src/: align_processor.rs  aligned_pairs.rs  bam_record_ext.rs  bam_writer.rs  cigar_cvt.rs  cli.rs  dna.rs  fille_reader.rs  lib.rs  mapping_ext.rs  params.rs  pb_tools.rs  samtools.rs  utils.rs
src/align_processor/: align_metric.rs  hp_tr_metric.rs  mod.rs  time_err_metric.rs
test_data/: ch11-6000.fa  ecoli_query.fa  query_of_ch11.fa  seq.fasta
